--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 //    compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.hsqldb:hsqldb")
     compile("mysql:mysql-connector-java:8.0.15")
+    compile("org.projectlombok:lombok:1.18.6")
     testCompile("junit:junit")
 }
 
